--- a/docs/algorithms-data-structures/notebooks/files/golang-workspace.ipynb
+++ b/docs/algorithms-data-structures/notebooks/files/golang-workspace.ipynb
@@ -1,8 +1,56 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e1c61de2-1790-418d-9494-7d13ea1e787c",
+   "metadata": {},
+   "source": [
+    "# Golang Workspace"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a12401a3-0ee7-49ea-8f33-402ae0be0aa9",
+   "metadata": {},
+   "source": [
+    "## Intro"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "id": "8cf33965-8ee7-4f67-b440-e360f2d418c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/root/go\n",
+      "/root/go/bin:/usr/local/bin:/usr/local/sbin:/usr/sbin:/usr/bin:/sbin:/bin\n",
+      "go version go1.19.8 linux/amd64\n"
+     ]
+    }
+   ],
+   "source": [
+    "// %env GOPATH=/root/go\n",
+    "// %env PATH=/root/go:/usr/local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin\n",
+    "!echo $GOPATH\n",
+    "!echo $PATH\n",
+    "!go version"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95c872ca-859c-4f02-afd8-3ae252bcdcf4",
+   "metadata": {},
+   "source": [
+    "## Golang Kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "b47a67b2-8482-4ae6-bdb2-b523631aca28",
    "metadata": {},
    "outputs": [
@@ -261,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d1a0b992-4e3f-425b-92e5-103b14c096ed",
    "metadata": {},
    "outputs": [
@@ -281,12 +329,139 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e37ff1e2-dbc5-4fd9-a5dc-35e7a7f41d9a",
+   "cell_type": "markdown",
+   "id": "2f04a3f0-086b-4a32-a0cc-4ce92c15dbde",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Useful and Versatile Go Code Snippets\n",
+    "\n",
+    "by Beck Moulton\n",
+    "[published on Medium](https://levelup.gitconnected.com/useful-and-versatile-go-code-snippets-592cdf31b637)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc38f050-0c39-4eb7-a625-d8328c6b0730",
+   "metadata": {},
+   "source": [
+    "### Timing Execution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "136db3d3-d99a-4c36-b372-39e412ea0efa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elapsed: 500.758575ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "import \"fmt\"\n",
+    "// Utility\n",
+    "\n",
+    "func TrackTime(pre time.Time) time.Duration {\n",
+    " elapsed := time.Since(pre)\n",
+    " fmt.Println(\"elapsed:\", elapsed)\n",
+    " return elapsed\n",
+    "}\n",
+    "\n",
+    "%%\n",
+    "defer TrackTime(time.Now()) // <--- THIS\n",
+    "time.Sleep(500 * time.Millisecond)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47b5cede-b4c9-419b-aef6-ddb2e1fc33d8",
+   "metadata": {},
+   "source": [
+    "### Two-Stage Deferred Execution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "923c59a6-ff10-40c3-b3a7-244fcaf703d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Run initialization\n",
+      "Main function called\n",
+      "Run cleanup\n"
+     ]
+    }
+   ],
+   "source": [
+    "func setupTeardown() func() {\n",
+    "  fmt.Println(\"Run initialization\")\n",
+    "  return func() {\n",
+    "    fmt.Println(\"Run cleanup\")\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "func main() {\n",
+    "  defer setupTeardown()() // <--------\n",
+    "  fmt.Println(\"Main function called\")\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6126a13a-60a7-4152-bd34-185bd8882d1c",
+   "metadata": {},
+   "source": [
+    "### Method Chaining"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ed464339-4a53-4ab2-a11a-f99e7bb11d10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{Aiden 30}\n",
+      "{AIDEN 31}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import \"fmt\"\n",
+    "\n",
+    "type Person struct {\n",
+    "  Name string\n",
+    "  Age  int\n",
+    "}\n",
+    "\n",
+    "func (p *Person) AddAge() *Person {\n",
+    "  p.Age++\n",
+    "  return p\n",
+    "}\n",
+    "\n",
+    "func (p *Person) Rename(name string) *Person {\n",
+    "  p.Name = name\n",
+    "  return p\n",
+    "}\n",
+    "\n",
+    "%%\n",
+    "p := Person{Name: \"Aiden\", Age: 30}\n",
+    "fmt.Println(p)\n",
+    "p = *p.AddAge().Rename(\"AIDEN\")\n",
+    "fmt.Println(p)"
+   ]
   }
  ],
  "metadata": {
