--- a/docs/algorithms-data-structures/notebooks/files/nodejs-workspace.ipynb
+++ b/docs/algorithms-data-structures/notebooks/files/nodejs-workspace.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7d84281b-af46-4c1b-88d2-9d9e2814ded2",
+   "metadata": {},
+   "source": [
+    "# NodeJS Workspace"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8741d128-6398-44a7-b601-d41c794c1169",
+   "metadata": {},
+   "source": [
+    "## Intro"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cee3bfd2-4731-4ca4-aae1-d80daf37ce66",
