--- a/docs/algorithms-data-structures/notebooks/files/python-workspace.ipynb
+++ b/docs/algorithms-data-structures/notebooks/files/python-workspace.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python Workspace"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Intro"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -20,9 +34,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "# 27 Python Coding Tips: Lessons I Wish I Knew When I Started Coding\n",
+    "## Python Coding Tips: Lessons I Wish I Knew When I Started Coding\n",
     "by Livia Ellen\n",
     "[published on Medium](https://python.plainenglish.io/27-python-coding-tips-lessons-i-wish-i-knew-when-i-started-coding-1608696b3b0d)\n",
     "\n"
@@ -455,6 +471,222 @@
     "dict2 = {'b': 3, 'c': 4}\n",
     "dict1.update(dict2)\n",
     "print(dict1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Context Managers In Python\n",
+    "\n",
+    "by Yanick Andrade\n",
+    "[published on Medium](https://python.plainenglish.io/context-managers-in-python-its-so-awesome-that-you-won-t-believe-3861bb5c4d0b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "init\n",
+      "enter\n",
+      "login\n",
+      "exit\n",
+      "logout\n"
+     ]
+    }
+   ],
+   "source": [
+    "class AuthManager:\n",
+    "  def __init__(self, username: str, password: str) -> None:\n",
+    "    print('init')\n",
+    "    self.username = username\n",
+    "    self.password = password\n",
+    "\n",
+    "  def __enter__(self):\n",
+    "    print('enter')\n",
+    "    return self\n",
+    "\n",
+    "  def __exit__(self, exc_type, exc_value, traceback):\n",
+    "    print('exit')\n",
+    "    # let's assume that we have some logic to log user out\n",
+    "    self.logout()\n",
+    "    # we will se why we are returning True\n",
+    "    return True\n",
+    "\n",
+    "  def login(self):\n",
+    "    print('login')\n",
+    "    # let's assume that we have some logic to log user in\n",
+    "    pass\n",
+    "\n",
+    "  def logout(self):\n",
+    "    print('logout')\n",
+    "    # let's assume that we have some logic to log user out\n",
+    "    pass\n",
+    "\n",
+    "with AuthManager(username=\"random\", password=\"random\") as auth:\n",
+    "  # let's assume that we have some logic to log user in\n",
+    "  auth.login()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## How to Filter a List in Python\n",
+    "\n",
+    "[by Soumya Agarwal](https://techbeamers.com/how-do-you-filter-a-list-in-python/)\n",
+    "\n",
+    "__comparing methods for filtering lists in Python__\n",
+    "\n",
+    "| Method | Example | Advantages | Disadvantages |\n",
+    "| :---   | :---    | :---       | :---          |\n",
+    "| `filter()` | `result = filter(lambda x: x%2 == 0, num_list)` | (i) Efficient for complex conditions or reusable filters; (ii) Concise and readable | (i) Not as efficient as list comprehension for simple cases; (ii) Requires defining a separate function. |\n",
+    "| List comprehension | `result = [x for x in num_list if x%2 == 0]` | (i) Concise and efficient for simple filtering. | (i)  Less flexible than `filter()` for complex conditions; (ii) Can be less readable with complex logic. |\n",
+    "| Loop | `result = []for x in num_list: if x%2 == 0: new_list.append(x)` | (i) Easiest to understand for beginners | (i) Less efficient than filter() or list comprehension; (ii) Longer and less readable for complex tasks. |\n",
+    "| Built-in functions | `result = max(num_list)` | (i) Highly efficient for specific tasks like finding min/max; (ii) Built-in and easy to use. | (i) Limited to specific tasks; (ii) Not suitable for more complex filtering criteria. |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### using the `filter()` function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 31, 51]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [11, 22, 31, 42, 51]\n",
+    "\n",
+    "def is_num_odd(z):\n",
+    "  return z % 2 != 0\n",
+    "\n",
+    "out_nums = filter(is_num_odd, nums)\n",
+    "# Convert the iterator to a list\n",
+    "out_nums = list(out_nums)\n",
+    "print(out_nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### using list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22, 42]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [11, 22, 31, 42, 51]\n",
+    "result = [x for x in nums if x % 2 == 0]\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### using a loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22, 42]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [11, 22, 31, 42, 51]\n",
+    "outNums = []\n",
+    "for n in nums:\n",
+    "  if n % 2 == 0:\n",
+    "    outNums.append(n)\n",
+    "print(outNums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### filtering using regular expressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['johndoe@example.com'], ['johnsmith123@gmail.com'], []]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "texts = [\n",
+    "  \"My email is johndoe@example.com.\",\n",
+    "  \"Contact me at johnsmith123@gmail.com\",\n",
+    "  \"This website has no contact information.\"\n",
+    "]\n",
+    "emails = [re.findall(r\"[\\w.]+@\\w+\\.\\w+\", text) for text in texts]\n",
+    "print(emails)"
    ]
   }
  ],
