--- a/docs/algorithms-data-structures/notebooks/files/nodejs-workspace.ipynb
+++ b/docs/algorithms-data-structures/notebooks/files/nodejs-workspace.ipynb
@@ -5,7 +5,9 @@
    "id": "7d84281b-af46-4c1b-88d2-9d9e2814ded2",
    "metadata": {},
    "source": [
-    "# NodeJS Workspace"
+    "# NodeJS Workspace\n",
+    "\n",
+    "- [JS kernel github repo](https://github.com/n-riesco/ijavascript)\n"
    ]
   },
   {
