add another decorator sample in python notebook

--- a/docs/algorithms-data-structures/notebooks/files/python-workspace.ipynb
+++ b/docs/algorithms-data-structures/notebooks/files/python-workspace.ipynb
@@ -34,9 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Python Coding Tips: Lessons I Wish I Knew When I Started Coding\n",
     "by Livia Ellen\n",
@@ -101,6 +99,68 @@
     "  print(fibonacci_of(10))\n",
     "\n",
     "example_function()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n",
+      "example_function executed in 0.0004971027374267578 seconds\n",
+      "55\n",
+      "TIMER: fibonacci executed in 4.029273986816406e-05 seconds\n",
+      "55\n",
+      "TIMER: fibonacci timer executed in 3.647804260253906e-05 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# decorator\n",
+    "import time\n",
+    "def timer_decorator(func):\n",
+    "  def wrapper(*args, **kwargs):\n",
+    "    start_time = time.time()\n",
+    "    result = func(*args, **kwargs)\n",
+    "    end_time = time.time()\n",
+    "    print(f'{func.__name__} executed in {end_time - start_time} seconds')\n",
+    "    return result\n",
+    "  return wrapper\n",
+    "\n",
+    "def fibonacci_of(n):\n",
+    "  if n in {0, 1}:  # Base case\n",
+    "    return n\n",
+    "  return fibonacci_of(n - 1) + fibonacci_of(n - 2)  # Recursive case\n",
+    "\n",
+    "@timer_decorator\n",
+    "def example_function():\n",
+    "  print(fibonacci_of(10))\n",
+    "\n",
+    "example_function()\n",
+    "\n",
+    "# decorator as a context\n",
+    "from contextlib import contextmanager\n",
+    "@contextmanager\n",
+    "def timer_b(name):\n",
+    "  try:\n",
+    "    # print(f'TIMER: {name} start')\n",
+    "    start_time = time.time()\n",
+    "    yield\n",
+    "  finally:\n",
+    "    end_time = time.time()\n",
+    "    print(f'TIMER: {name} executed in {end_time - start_time} seconds')\n",
+    "\n",
+    "@timer_b(name='fibonacci')\n",
+    "def example_function_b():\n",
+    "  print(fibonacci_of(10))\n",
+    "example_function_b()\n",
+    "\n",
+    "with timer_b(name='fibonacci timer'):\n",
+    "  print(fibonacci_of(10))"
    ]
   },
   {
@@ -475,9 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Context Managers In Python\n",
     "\n",
@@ -537,10 +595,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n",
+      "TIMER: fibonacci executed in 0.0008521080017089844 seconds\n",
+      "55\n",
+      "TIMER: fibonacci timer executed in 4.3392181396484375e-05 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# decorator as a context\n",
+    "from contextlib import contextmanager\n",
+    "import time\n",
+    "@contextmanager\n",
+    "def timer_b(name):\n",
+    "  try:\n",
+    "    # print(f'TIMER: {name} start')\n",
+    "    start_time = time.time()\n",
+    "    yield\n",
+    "  finally:\n",
+    "    end_time = time.time()\n",
+    "    print(f'TIMER: {name} executed in {end_time - start_time} seconds')\n",
+    "\n",
+    "@timer_b(name='fibonacci')\n",
+    "def example_function_b():\n",
+    "  print(fibonacci_of(10))\n",
+    "example_function_b()\n",
+    "\n",
+    "with timer_b(name='fibonacci timer'):\n",
+    "  print(fibonacci_of(10))"
+   ]
   },
   {
    "cell_type": "markdown",
