--- a/docs/languages/shell/08-jq.md
+++ b/docs/languages/shell/08-jq.md
@@ -7,22 +7,393 @@ grand_parent: Programming Languages
 permalink: /docs/languages/shell/jq
 ---
 
-# SED
+# JQ
 
 - [advanced text processing]({% link docs/languages/shell/07-text-processing.md %})
 - [`jq` basic - bash script]({% link docs/languages/shell/bash.md %}#jq)
 - [awk]({% link docs/languages/shell/08-awk.md %}) <sup>[+]({% link docs/languages/shell/bash.md %}#awk)</sup>
 - [sed]({% link docs/languages/shell/08-sed.md %}) <sup>[+]({% link docs/languages/shell/bash.md %}#sed)</sup>
 
-<details markdown="block">
-  <summary>
-    Table of contents
-  </summary>
-  {: .text-delta }
-1. TOC
-{:toc}
-</details>
 
 <br/>
 
+- JQ Playground: [jqplay.org](https://jqplay.org/)
+  <sup><sup>[+](https://www.devtoolsdaily.com/jq_playground/)</sup></sup>
+  <sup><sup>[+](https://jqkungfu.com/)</sup></sup>
 
+- <details markdown="block"> <summary> users json sample </summary>
+  
+  [^1]
+  ```sh
+  curl 'https://jsonplaceholder.typicode.com/users' | jq
+  ```
+  ```json
+  [
+    {
+      "id": 1,
+      "name": "Leanne Graham",
+      "username": "Bret",
+      "email": "Sincere@april.biz",
+      "address": {
+        "street": "Kulas Light",
+        "suite": "Apt. 556",
+        "city": "Gwenborough",
+        "zipcode": "92998-3874",
+        "geo": {
+          "lat": "-37.3159",
+          "lng": "81.1496"
+        }
+      },
+      "phone": "1-770-736-8031 x56442",
+      "website": "hildegard.org",
+      "company": {
+        "name": "Romaguera-Crona",
+        "catchPhrase": "Multi-layered client-server neural-net",
+        "bs": "harness real-time e-markets"
+      }
+    },
+    {
+      "id": 2,
+      "name": "Ervin Howell",
+      "username": "Antonette",
+      "email": "Shanna@melissa.tv",
+      "address": {
+        "street": "Victor Plains",
+        "suite": "Suite 879",
+        "city": "Wisokyburgh",
+        "zipcode": "90566-7771",
+        "geo": {
+          "lat": "-43.9509",
+          "lng": "-34.4618"
+        }
+      },
+      "phone": "010-692-6593 x09125",
+      "website": "anastasia.net",
+      "company": {
+        "name": "Deckow-Crist",
+        "catchPhrase": "Proactive didactic contingency",
+        "bs": "synergize scalable supply-chains"
+      }
+    },
+    {
+      "id": 3,
+      "name": "Clementine Bauch",
+      "username": "Samantha",
+      "email": "Nathan@yesenia.net",
+      "address": {
+        "street": "Douglas Extension",
+        "suite": "Suite 847",
+        "city": "McKenziehaven",
+        "zipcode": "59590-4157",
+        "geo": {
+          "lat": "-68.6102",
+          "lng": "-47.0653"
+        }
+      },
+      "phone": "1-463-123-4447",
+      "website": "ramiro.info",
+      "company": {
+        "name": "Romaguera-Jacobson",
+        "catchPhrase": "Face to face bifurcated interface",
+        "bs": "e-enable strategic applications"
+      }
+    },
+    {
+      "id": 4,
+      "name": "Patricia Lebsack",
+      "username": "Karianne",
+      "email": "Julianne.OConner@kory.org",
+      "address": {
+        "street": "Hoeger Mall",
+        "suite": "Apt. 692",
+        "city": "South Elvis",
+        "zipcode": "53919-4257",
+        "geo": {
+          "lat": "29.4572",
+          "lng": "-164.2990"
+        }
+      },
+      "phone": "493-170-9623 x156",
+      "website": "kale.biz",
+      "company": {
+        "name": "Robel-Corkery",
+        "catchPhrase": "Multi-tiered zero tolerance productivity",
+        "bs": "transition cutting-edge web services"
+      }
+    },
+    {
+      "id": 5,
+      "name": "Chelsey Dietrich",
+      "username": "Kamren",
+      "email": "Lucio_Hettinger@annie.ca",
+      "address": {
+        "street": "Skiles Walks",
+        "suite": "Suite 351",
+        "city": "Roscoeview",
+        "zipcode": "33263",
+        "geo": {
+          "lat": "-31.8129",
+          "lng": "62.5342"
+        }
+      },
+      "phone": "(254)954-1289",
+      "website": "demarco.info",
+      "company": {
+        "name": "Keebler LLC",
+        "catchPhrase": "User-centric fault-tolerant solution",
+        "bs": "revolutionize end-to-end systems"
+      }
+    },
+    {
+      "id": 6,
+      "name": "Mrs. Dennis Schulist",
+      "username": "Leopoldo_Corkery",
+      "email": "Karley_Dach@jasper.info",
+      "address": {
+        "street": "Norberto Crossing",
+        "suite": "Apt. 950",
+        "city": "South Christy",
+        "zipcode": "23505-1337",
+        "geo": {
+          "lat": "-71.4197",
+          "lng": "71.7478"
+        }
+      },
+      "phone": "1-477-935-8478 x6430",
+      "website": "ola.org",
+      "company": {
+        "name": "Considine-Lockman",
+        "catchPhrase": "Synchronised bottom-line interface",
+        "bs": "e-enable innovative applications"
+      }
+    },
+    {
+      "id": 7,
+      "name": "Kurtis Weissnat",
+      "username": "Elwyn.Skiles",
+      "email": "Telly.Hoeger@billy.biz",
+      "address": {
+        "street": "Rex Trail",
+        "suite": "Suite 280",
+        "city": "Howemouth",
+        "zipcode": "58804-1099",
+        "geo": {
+          "lat": "24.8918",
+          "lng": "21.8984"
+        }
+      },
+      "phone": "210.067.6132",
+      "website": "elvis.io",
+      "company": {
+        "name": "Johns Group",
+        "catchPhrase": "Configurable multimedia task-force",
+        "bs": "generate enterprise e-tailers"
+      }
+    },
+    {
+      "id": 8,
+      "name": "Nicholas Runolfsdottir V",
+      "username": "Maxime_Nienow",
+      "email": "Sherwood@rosamond.me",
+      "address": {
+        "street": "Ellsworth Summit",
+        "suite": "Suite 729",
+        "city": "Aliyaview",
+        "zipcode": "45169",
+        "geo": {
+          "lat": "-14.3990",
+          "lng": "-120.7677"
+        }
+      },
+      "phone": "586.493.6943 x140",
+      "website": "jacynthe.com",
+      "company": {
+        "name": "Abernathy Group",
+        "catchPhrase": "Implemented secondary concept",
+        "bs": "e-enable extensible e-tailers"
+      }
+    },
+    {
+      "id": 9,
+      "name": "Glenna Reichert",
+      "username": "Delphine",
+      "email": "Chaim_McDermott@dana.io",
+      "address": {
+        "street": "Dayna Park",
+        "suite": "Suite 449",
+        "city": "Bartholomebury",
+        "zipcode": "76495-3109",
+        "geo": {
+          "lat": "24.6463",
+          "lng": "-168.8889"
+        }
+      },
+      "phone": "(775)976-6794 x41206",
+      "website": "conrad.com",
+      "company": {
+        "name": "Yost and Sons",
+        "catchPhrase": "Switchable contextually-based project",
+        "bs": "aggregate real-time technologies"
+      }
+    },
+    {
+      "id": 10,
+      "name": "Clementina DuBuque",
+      "username": "Moriah.Stanton",
+      "email": "Rey.Padberg@karina.biz",
+      "address": {
+        "street": "Kattie Turnpike",
+        "suite": "Suite 198",
+        "city": "Lebsackbury",
+        "zipcode": "31428-2261",
+        "geo": {
+          "lat": "-38.2386",
+          "lng": "57.2232"
+        }
+      },
+      "phone": "024-648-3804",
+      "website": "ambrose.net",
+      "company": {
+        "name": "Hoeger LLC",
+        "catchPhrase": "Centralized empowering task-force",
+        "bs": "target end-to-end models"
+      }
+    }
+  ]
+  ```
+  </details>
+
+- <details markdown="block"> <summary> user 1 json sample </summary>
+   
+  [^1]
+  ```sh
+  curl 'https://jsonplaceholder.typicode.com/users/1' | jq
+  ```
+  ```json
+  {
+    "id": 1,
+    "name": "Leanne Graham",
+    "username": "Bret",
+    "email": "Sincere@april.biz",
+    "address": {
+      "street": "Kulas Light",
+      "suite": "Apt. 556",
+      "city": "Gwenborough",
+      "zipcode": "92998-3874",
+      "geo": {
+        "lat": "-37.3159",
+        "lng": "81.1496"
+      }
+    },
+    "phone": "1-770-736-8031 x56442",
+    "website": "hildegard.org",
+    "company": {
+      "name": "Romaguera-Crona",
+      "catchPhrase": "Multi-layered client-server neural-net",
+      "bs": "harness real-time e-markets"
+    }
+  }
+  ```
+  </details>
+
+```sh
+# access specific fields
+curl 'https://jsonplaceholder.typicode.com/users/1' | jq '.name'
+
+# access nested fields
+curl 'https://jsonplaceholder.typicode.com/users/1' | jq '.address.zipcode'
+
+# filter json arrays
+curl 'https://jsonplaceholder.typicode.com/users' | jq '.[0]'
+
+# slice json arrays
+curl 'https://jsonplaceholder.typicode.com/users' | jq '.[3:6]'
+curl 'https://jsonplaceholder.typicode.com/users' | jq '.[:4]'
+curl 'https://jsonplaceholder.typicode.com/users' | jq '.[-6:-3]'
+
+# iterate json arrays
+curl 'https://jsonplaceholder.typicode.com/users' | jq '.[]'
+curl 'https://jsonplaceholder.typicode.com/users' | jq '.[].name'
+
+# CONSTRUCT OBJECTS AND ARRAYS
+# construct new json objects
+curl 'https://jsonplaceholder.typicode.com/users/1' | jq '{"name": .name, "email": .email, "company": .company.name}'
+# construct new json arrays
+curl 'https://jsonplaceholder.typicode.com/users' | jq '[.[] | {"name": .name, "emailAddress": .email, "company": .company.name}]'
+
+# combine filters
+curl 'https://jsonplaceholder.typicode.com/users/1' | jq '.address.zipcode'
+curl 'https://jsonplaceholder.typicode.com/users/1' | jq '.address | .zipcode'
+
+# USE FUNCTIONS
+# get length
+curl 'https://jsonplaceholder.typicode.com/users/1' | jq '.name | length'
+# get keys
+curl 'https://jsonplaceholder.typicode.com/users/1' | jq '. | keys'
+# map filters
+curl 'https://jsonplaceholder.typicode.com/users' | jq 'map({name: .name, city: .address.city})'
+curl 'https://jsonplaceholder.typicode.com/users' | jq '.[:3] | map({name: .name, city: .address.city, slug: ((.name + "-" + .address.city | gsub(" "; "-") | ascii_downcase))})'
+# select values
+curl 'https://jsonplaceholder.typicode.com/users' | jq '.[] | select(.address.city == "South Christy") | {name, username, email}'
+
+# TRANSFORM JSON
+curl 'https://jsonplaceholder.typicode.com/users' | jq \
+'group_by(.address.city) |
+map({
+  city: .[0].address.city,
+  user_count: length,
+  users: [.[] | {
+    name: .name,
+    username: .username,
+    slug: (.username + "-" + (.address.city))
+  }]
+})'
+# ...
+curl 'https://api.github.com/repos/apache/apisix/contributors?per_page=100' | jq \
+'sort_by(.contributions) |
+reverse |
+map({username: .login, contributions}) |
+.[0:5]'
+```
+
+- <details markdown="block"> <summary> store json sample </summary>
+   
+  [^2]
+  ```json
+  {
+    "store": {
+      "books": [
+        { "title": "The Great Gatsby", "author": "F. Scott Fitzgerald", "price": 10.99, "genre": "fiction" },
+        { "title": "Clean Code", "author": "Robert C. Martin", "price": 38.95, "genre": "non-fiction" },
+        { "title": "The Pragmatic Programmer", "author": "Andrew Hunt", "price": 42.99, "genre": "non-fiction" },
+        { "title": "1984", "author": "George Orwell", "price": 8.99, "genre": "fiction" }
+      ],
+      "music": [
+        { "artist": "The Beatles", "album": "Abbey Road", "price": 19.99, "genre": "rock" },
+        { "artist": "Miles Davis", "album": "Kind of Blue", "price": 15.49, "genre": "jazz" }
+      ]
+    }
+  }
+  ```
+  </details>
+
+```sh
+jq '
+.store | 
+{
+  "summary": (
+    [.books[], .music[] | select(.price <= 20)] |
+    group_by(.genre) |
+    map({
+      genre: .[0].genre,
+      total_items: length,
+      total_price: map(.price) | add
+    })
+  )
+}' data.json
+```
+
+----
+
+[^1]: [An Interactive Guide to Transforming JSON with jq](https://navendu.me/posts/jq-interactive-guide/)
+[^2]: [navendu jq Playground](https://navendu.me/playgrounds/jq/)
