--- a/docs/languages/js/bundle/react-aria-component-20250124-13-21/package.json
+++ b/docs/languages/js/bundle/react-aria-component-20250124-13-21/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react-aria-components": "^1.6.0"
+    "react": "^18.3.1",
+    "react-aria-components": "^1.6.0",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "webpack": "^5.97.1",
